--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_feed">FeedActivity</string>
     <string name="title_activity_language">LanguageActivity</string>
+    <string name="title_activity_tabbed_swipe">LanguageActivity</string>
+    <string name="title_section1">1</string>
+    <string name="title_section2">2</string>
+    <string name="title_section3">3</string>
+    
 
 </resources>
